packet structure defined (header body), networkclass being abstracted for game specifics

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -53,8 +53,22 @@
     "list": "cpp",
     "ratio": "cpp",
     "iomanip": "cpp",
-    "internet": "cpp"
-  },
+    "internet": "cpp",
+    "condition_variable": "cpp",
+    "cstring": "cpp",
+    "forward_list": "cpp",
+    "buffer": "cpp",
+    "executor": "cpp",
+    "io_context": "cpp",
+    "netfwd": "cpp",
+    "socket": "cpp",
+    "timer": "cpp",
+    "future": "cpp",
+    "mutex": "cpp",
+    "semaphore": "cpp",
+    "stop_token": "cpp",
+    "thread": "cpp"
+},
   "C_Cpp_Runner.cCompilerPath": "gcc",
   "C_Cpp_Runner.cppCompilerPath": "g++",
   "C_Cpp_Runner.debuggerPath": "gdb",
